aws/admin-catalog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: admin-catalog
  namespace: codeflix
  labels:
    app: admin-catalog
spec:
  selector:
    matchLabels:
      app: admin-catalog   
  replicas: 1
  template:
    metadata:
      labels:
        app: admin-catalog
        role: app
    spec:
      containers:
        - name: admin-catalog
          image: igorgomes96/fc3-admin-catalogo-de-videos-c-sharp:latest
