aws/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: codeflix
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        role: db
      containers:
        - name: mysql
          image: mysql:8.4.2
          ports:
          - containerPort: 3306
          volumeMounts:
          - name: mysql-storage
            mountPath: /var/lib/mysql
      volumes:
        - name: mysql-storage
          persistentVolumeClaim:
            claimName: db-pvc
