aws/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: codeflix
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: external
    service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    service.beta.kubernetes.io/aws-load-balancer-scheme: internet-facing
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
  - name: nginx-service
    port: 80
    targetPort: 80
    protocol: TCP
